js/src/main/TopBar/TopBar.css
/*
 * Copyright (C) 2020 CZ.NIC z.s.p.o. (http://www.nic.cz/)
 *
 * This is free software, licensed under the GNU General Public License v3.
 * See /LICENSE for more information.
 */

#top-bar, #top-bar-container {
    display: flex;
    justify-content: flex-end;
}

#top-bar {
    align-items: center;
    position: absolute;
    right: 30px;
    z-index: 1000;
}

#top-bar-container {
    align-items: stretch;
}

#top-bar .nav-item {
    text-decoration: none;
    color: black;
    height: 100%;
}

@media (max-width: 768px) {
    #top-bar {
        justify-content: center;
        position: initial;
        margin-bottom: 1rem;
    }
}

#top-bar a:hover {
    text-decoration: none;
    color: #00a2e2;
}

#top-bar .dropdown-header, #top-bar .dropdown-header a {
    color: #333333;
}

#top-bar .dropdown-header h5 {
    margin-bottom: 0
}

#top-bar .dropdown:hover .dropdown-menu {
    display: block;
}

